fixed position of name and logo on iphone 6

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,7 +47,7 @@ header {
 		float: left;
 	}
 	.name {
-		margin-left: 20px;
+		margin-left: 8px;
 		float: left;
 		padding-top: 13px;
 		p {
@@ -56,7 +56,7 @@ header {
 			line-height: 1.5;
 		}
 		.my-name {
-			font-size: 1.4rem;
+			font-size: 1.2rem;
 		}
 	}
 	.side-nav-info, .side-nav-links {
